# crystallography

./: .gitignore  CMakeLists.txt  README.md  examples.py  h5ebsd.py  mmap.hpp  orientation_map.hpp  rotations.hpp  rotations.py  symmetry.py  tsl.hpp  tsl.py
include/: orientation_coloring.hpp  orientation_map.hpp  oxford.hpp  quaternion.hpp  rotations.hpp  symmetry.hpp  tif.hpp  tsl.hpp
python/: CMakeLists.txt  crystallography_module.cpp  examples.py  orientation_map_wrapper.hpp  quaternion.py  quaternion_wrapper.hpp  rotations_wrapper.hpp  symmetry.py  symmetry_wrapper.hpp
test/: CMakeLists.txt  ipf_test.cpp  rotations_test.cpp
